# wahoot

./: .flake8  .gitignore  .pre-commit-config.yaml  BITTENSOR_RESEARCH.md  DESIGN_VISUALS.md  DOCKER_SETUP.md  Dockerfile  LICENSE  LOCAL_NET_SETUP.md  MONITORING_GUIDE.md  Makefile  QUICK_REFERENCE.md  QUICK_START_TESTING.md  README.md  RELEASE_READINESS_CHECKLIST.md  RELEASE_TEST_CHECKLIST.md  SETUP_COMPLETE.md  SUBNET_FLOW_DESIGN.md  TESTING_GUIDE.md  TEST_EXECUTION_GUIDE.md  TEST_PLAN_SUMMARY.md  TODAYS_WORK_SUMMARY.md  WAHOO_PLATFORM_ANALYSIS.md  add_weight_tracking.md  check_local_net.sh  check_tempo.sh  check_test_status.py  check_wallet_balances.py  docker-compose.yml  fix_docker_permissions.sh  miner.py  miners.md  monitor_communication.sh  monitor_test_progress.sh  protocol.py  pyproject.toml  register_all_wallets.py  register_all_wallets.sh  register_wallets.py  register_wallets.sh  (+18 more)
Utils/: __init__.py  format.py  format_check.py  pre_commit_hook.sh
alembic/: env.py
cli/: __init__.py  export_weights.py  resolve.py  score.py  seed.py
neurons/: __init__.py  scoring.py  validator.py  validator_db.py
scripts/: check_database_live.sh  create_wallets.sh  explore_database.py  mock_api_server.py  populate_test_data.py  register_localnet.sh  run_miner.sh  run_tests.sh  run_validator.sh  run_validator_simulation.sh  setup_localnet.sh  setup_validator.sh  simple_commands.sh  simulate_full_flow.sh  start_mock_api.sh  stop_mock_api.sh  test_localnet.sh  test_mock_data.py  test_simulation.sh  test_with_mock_data.sh  view_database.sh  view_miner_data.sh
(+87 files in other folders)
